--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@modules/address-selection-autocomplete": "file:./modules/address-selection-autocomplete/",
     "@modules/appointment": "file:./modules/appointment/",
     "@modules/appointment-local": "file:./modules/appointment-local/",
+    "@modules/articles": "file:./modules/articles/",
     "@react-native-community/geolocation": "2.1.0",
     "@react-native-google-signin/google-signin": "7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
