--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@modules/appointment": "file:./modules/appointment/",
     "@modules/appointment-local": "file:./modules/appointment-local/",
     "@modules/articles": "file:./modules/articles/",
+    "@modules/audio-player": "file:./modules/audio-player/",
     "@react-native-community/geolocation": "2.1.0",
     "@react-native-google-signin/google-signin": "7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
@@ -30,6 +31,7 @@
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.7",
+    "react-native-audio-recorder-player": "3.5.3",
     "react-native-calendar-strip": "2.2.5",
     "react-native-calendars": "1.1282.0",
     "react-native-dotenv": "^3.4.8",
@@ -44,11 +46,13 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "3.20.0",
+    "react-native-slider": "^0.11.0",
     "react-native-tab-view": "3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "rn-fetch-blob": "0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
