--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@modules/chat": "file:./modules/chat/",
     "@modules/login": "file:./modules/login/",
     "@modules/qr-code": "file:./modules/qr-code/",
+    "@modules/social-feed": "file:./modules/social-feed",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
