--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@modules/camera": "file:./modules/camera/",
     "@modules/chat": "file:./modules/chat/",
     "@modules/contact-us": "file:./modules/contact-us/",
+    "@modules/faq": "file:./modules/faq",
     "@modules/login": "file:./modules/login/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
