--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@modules/contact-us": "file:./modules/contact-us/",
     "@modules/faq": "file:./modules/faq",
     "@modules/login": "file:./modules/login/",
+    "@modules/maps": "file:./modules/maps/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@react-native-async-storage/async-storage": "1.17.9",
@@ -54,7 +55,8 @@
     "react-native-image-crop-picker": "^0.36.2",
     "react-native-image-picker": "5.4.0",
     "react-native-linear-gradient": "^2.4.0",
-    "react-native-maps": "0.27.1",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-directions": "1.8.0",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "3.0.4",
