add component Google Analytics

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@modules/chat": "file:./modules/chat/",
     "@modules/contact-us": "file:./modules/contact-us/",
     "@modules/faq": "file:./modules/faq",
+    "@modules/google-analytics": "file:./modules/google-analytics/",
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/qr-code": "file:./modules/qr-code/",
@@ -31,6 +32,8 @@
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
+    "@react-native-firebase/analytics": "14.11.0",
+    "@react-native-firebase/app": "14.11.0",
     "@react-native-google-signin/google-signin": "7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-navigation/native": "^6.1.6",
