add component Live Camera Filters module

--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "@modules/contact-us": "file:./modules/contact-us/",
     "@modules/faq": "file:./modules/faq",
     "@modules/google-analytics": "file:./modules/google-analytics/",
+    "@modules/live-camera-filters": "file:./modules/live-camera-filters/",
     "@modules/login": "file:./modules/login/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@react-native-async-storage/async-storage": "1.17.9",
+    "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
     "@react-native-firebase/analytics": "14.11.0",
@@ -53,6 +55,7 @@
     "react-native-camera": "4.2.1",
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
+    "react-native-filter-camera": "0.1.18",
     "react-native-fs": "2.19.0",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-google-places-autocomplete": "2.4.1",
