--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@modules/google-analytics": "file:./modules/google-analytics/",
     "@modules/live-camera-filters": "file:./modules/live-camera-filters/",
     "@modules/login": "file:./modules/login/",
+    "@modules/mapbox-maps": "file:./modules/mapbox-maps/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
@@ -43,6 +44,8 @@
     "@react-navigation/native-stack": "6.5.0",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
+    "@rnmapbox/maps": "rnmapbox/maps#main",
+    "@turf/helpers": "^6.5.0",
     "axios": "^1.4.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -74,6 +77,7 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "3.20.0",
     "react-native-slider": "^0.11.0",
+    "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
