--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@modules/login": "file:./modules/login/",
     "@modules/mapbox-maps": "file:./modules/mapbox-maps/",
     "@modules/maps": "file:./modules/maps/",
+    "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@react-native-async-storage/async-storage": "1.17.9",
@@ -47,6 +48,7 @@
     "@rnmapbox/maps": "rnmapbox/maps#main",
     "@turf/helpers": "^6.5.0",
     "axios": "^1.4.0",
+    "mixpanel-react-native": "^2.3.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
