--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@modules/mapbox-maps": "file:./modules/mapbox-maps/",
     "@modules/maps": "file:./modules/maps/",
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
+    "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@react-native-async-storage/async-storage": "1.17.9",
