--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
+    "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/checkbox": "0.5.10",
@@ -84,6 +85,7 @@
     "react-native-tab-view": "3.1.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.10",
+    "react-native-webview": "^11.17.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "rn-fetch-blob": "0.12.0"
