add component Payments

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@modules/maps": "file:./modules/maps/",
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/onboarding": "file:./modules/onboarding/",
+    "@modules/payments": "file:./modules/payments",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
@@ -48,8 +49,10 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "@rnmapbox/maps": "rnmapbox/maps#main",
+    "@stripe/stripe-react-native": "^0.2.2",
     "@turf/helpers": "^6.5.0",
     "axios": "^1.4.0",
+    "babel-plugin-import-glob": "^2.0.0",
     "mixpanel-react-native": "^2.3.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
