--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
+    "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/cameraroll": "^4.1.2",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
+    "@react-native-cookies/cookies": "6.0.11",
     "@react-native-firebase/analytics": "14.11.0",
     "@react-native-firebase/app": "14.11.0",
     "@react-native-google-signin/google-signin": "7.2.2",
@@ -63,6 +65,7 @@
     "react-native-calendar-strip": "2.2.5",
     "react-native-calendars": "1.1282.0",
     "react-native-camera": "4.2.1",
+    "react-native-date-picker": "4.1.5",
     "react-native-dotenv": "^3.4.8",
     "react-native-elements": "^3.4.3",
     "react-native-filter-camera": "0.1.18",
@@ -83,12 +86,14 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "3.20.0",
+    "react-native-sha256": "1.4.7",
     "react-native-slider": "^0.11.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "^11.17.0",
+    "react-native-webview": "^11.17.2",
+    "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "rn-fetch-blob": "0.12.0"
