--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "@modules/mixpanel-analytics": "file:./modules/mixpanel-analytics/",
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/payments": "file:./modules/payments",
+    "@modules/photo-editing": "file:./modules/photo-editing/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
-    "@react-native-community/cameraroll": "^4.1.2",
+    "@react-native-community/cameraroll": "4.1.2",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
+    "@react-native-community/slider": "4.2.2",
     "@react-native-cookies/cookies": "6.0.11",
     "@react-native-firebase/analytics": "14.11.0",
     "@react-native-firebase/app": "14.11.0",
@@ -55,6 +57,8 @@
     "@turf/helpers": "^6.5.0",
     "axios": "^1.4.0",
     "babel-plugin-import-glob": "^2.0.0",
+    "gl-react": "^4.0.1",
+    "gl-react-native": "^4.0.1",
     "mixpanel-react-native": "^2.3.1",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -71,9 +75,11 @@
     "react-native-filter-camera": "0.1.18",
     "react-native-fs": "2.19.0",
     "react-native-gesture-handler": "^2.10.0",
+    "react-native-gl-image-filters": "0.5.0",
     "react-native-google-places-autocomplete": "2.4.1",
     "react-native-image-crop-picker": "^0.36.2",
-    "react-native-image-picker": "5.4.0",
+    "react-native-image-picker": "4.8.3",
+    "react-native-image-resizer": "1.4.5",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-maps": "0.27.1",
     "react-native-maps-directions": "1.8.0",
@@ -85,11 +91,12 @@
     "react-native-reanimated": "~2.14.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "3.20.0",
+    "react-native-screens": "3.10.2",
     "react-native-sha256": "1.4.7",
     "react-native-slider": "^0.11.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
+    "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
     "react-native-webview": "^11.17.2",
