add component Image Gallery module

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@modules/contact-us": "file:./modules/contact-us/",
     "@modules/faq": "file:./modules/faq",
     "@modules/google-analytics": "file:./modules/google-analytics/",
+    "@modules/image-gallery": "file:./modules/image-gallery/",
     "@modules/live-camera-filters": "file:./modules/live-camera-filters/",
     "@modules/login": "file:./modules/login/",
     "@modules/mapbox-maps": "file:./modules/mapbox-maps/",
@@ -39,6 +40,7 @@
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
+    "@react-native-camera-roll/camera-roll": "5.0.2",
     "@react-native-community/cameraroll": "4.1.2",
     "@react-native-community/checkbox": "0.5.10",
     "@react-native-community/geolocation": "2.1.0",
