--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@modules/onboarding": "file:./modules/onboarding/",
     "@modules/payments": "file:./modules/payments",
     "@modules/photo-editing": "file:./modules/photo-editing/",
+    "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/qr-code": "file:./modules/qr-code/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
@@ -101,7 +102,7 @@
     "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "^11.17.2",
+    "react-native-webview": "11.23.0",
     "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
