--- a/package.json
+++ b/package.json
@@ -90,13 +90,13 @@
     "react-native-onesignal": "^4.0.3",
     "react-native-pager-view": "5.4.15",
     "react-native-paper": "^5.9.1",
-    "react-native-permissions": "3.0.4",
+    "react-native-permissions": "^2.0.10",
     "react-native-qrcode-scanner": "1.5.5",
     "react-native-radio-buttons-group": "^2.3.2",
     "react-native-reanimated": "~2.14.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.5.2",
-    "react-native-screens": "3.10.2",
+    "react-native-screens": "3.20.0",
     "react-native-sha256": "1.4.7",
     "react-native-slider": "^0.11.0",
     "react-native-switch-toggle": "^2.2.1",
