--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/push-notifications": "file:./modules/push-notifications/",
     "@modules/qr-code": "file:./modules/qr-code/",
+    "@modules/signature": "file:./modules/signature/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
@@ -98,13 +99,14 @@
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "3.20.0",
     "react-native-sha256": "1.4.7",
+    "react-native-signature-canvas": "4.3.0",
     "react-native-slider": "^0.11.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "^11.17.0",
+    "react-native-webview": "11.17.0",
     "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
