--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@modules/privacy-policy-webview": "file:./modules/privacy-policy-webview/",
     "@modules/push-notifications": "file:./modules/push-notifications/",
     "@modules/qr-code": "file:./modules/qr-code/",
+    "@modules/side-drawer": "file:./modules/side-drawer/",
     "@modules/signature": "file:./modules/signature/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
@@ -53,6 +54,7 @@
     "@react-native-firebase/app": "14.11.0",
     "@react-native-google-signin/google-signin": "7.2.2",
     "@react-native-masked-view/masked-view": "^0.2.9",
+    "@react-navigation/drawer": "^5.12.9",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "6.5.0",
     "@react-navigation/stack": "^6.3.16",
