--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@modules/signature": "file:./modules/signature/",
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/social-login": "file:./modules/social-login/",
+    "@modules/splash": "file:./modules/splash/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
@@ -104,6 +105,7 @@
     "react-native-sha256": "1.4.7",
     "react-native-signature-canvas": "4.3.0",
     "react-native-slider": "^0.11.0",
+    "react-native-splash-screen": "3.3.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-unimodules": "0.13.3",
