add component Subscription

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@modules/social-feed": "file:./modules/social-feed",
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/splash": "file:./modules/splash/",
+    "@modules/subscription": "file:./modules/subscription",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
