--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@modules/social-login": "file:./modules/social-login/",
     "@modules/splash": "file:./modules/splash/",
     "@modules/subscription": "file:./modules/subscription",
+    "@modules/terms-and-conditions-webview": "file:./modules/terms-and-conditions-webview/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
@@ -112,7 +113,7 @@
     "react-native-unimodules": "0.13.3",
     "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "11.17.0",
+    "react-native-webview": "11.23.0",
     "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
