add component Two Factor Authentication

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "react-native-paper": "^5.9.1",
     "react-native-permissions": "^2.0.10",
     "react-native-qrcode-scanner": "1.5.5",
+    "react-native-qrcode-svg": "6.1.2",
     "react-native-radio-buttons-group": "^2.3.2",
     "react-native-reanimated": "~2.14.0",
     "react-native-responsive-screen": "^1.4.2",
@@ -108,6 +109,7 @@
     "react-native-signature-canvas": "4.3.0",
     "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "3.3.0",
+    "react-native-svg": "12.3.0",
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-unimodules": "0.13.3",
