--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@modules/terms-and-conditions-webview": "file:./modules/terms-and-conditions-webview/",
     "@modules/typeform-webhook": "file:./modules/typeform-webhook/",
     "@modules/user-profile": "file:./modules/user-profile/",
+    "@modules/youtube-player": "file:./modules/youtube-player/",
     "@modules/zoom-free-calling": "file:./modules/zoom-free-calling/",
     "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-camera-roll/camera-roll": "5.0.2",
@@ -114,9 +115,10 @@
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-unimodules": "0.13.3",
-    "react-native-vector-icons": "8.1.0",
+    "react-native-vector-icons": "9.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "^11.17.0",
+    "react-native-webview": "11.26.1",
+    "react-native-youtube-iframe": "2.3.0",
     "react-native-zoom-us": "6.16.5",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
