--- a/package.json
+++ b/package.json
@@ -115,11 +115,11 @@
     "react-native-switch-toggle": "^2.2.1",
     "react-native-tab-view": "3.1.1",
     "react-native-unimodules": "0.13.3",
-    "react-native-vector-icons": "9.1.0",
+    "react-native-vector-icons": "8.1.0",
     "react-native-web": "^0.18.10",
-    "react-native-webview": "11.26.1",
+    "react-native-webview": "^11.17.2",
     "react-native-youtube-iframe": "2.3.0",
-    "react-native-zoom-us": "6.16.5",
+    "react-native-zoom-us": "6.6.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "rn-fetch-blob": "0.12.0"
